app.handlers.undo_post calls undo_pre's function #60247

Closed
opened 2019-01-06 22:50:57 +01:00 by Dealga McArdle · 5 comments
Member

Blender Version
Broken:

>>> bpy.app.version, bpy.app.build_hash

(2, 80, 40), b'a77b63c56943'

a builder.blender.org build from 6 jan 2019,

Short description of error

A function appended to app.handlers.undo_pre is called, but app.handlers.undo_post is not.. it seems to call undo_pre instead a second time.

Exact steps for others to reproduce the error

  1. execute this script to set both undo_pre and undo_post app.handlers
import bpy
from bpy.app.handlers import persistent

@persistent
def handler_undo_pre(scene):
    print('pre')

@persistent
def handler_undo_post(scene):
    print('post')


if __name__ == '__main__':
    bpy.app.handlers.undo_pre.append(handler_undo_pre)
    bpy.app.handlers.undo_post.append(handler_undo_post)


- bpy.app.handlers.undo_pre.remove(handler_undo_pre)
- bpy.app.handlers.undo_post.remove(handler_undo_post)
  1. then trigger an undo. (maybe add a node in a nodetree and press ctrl+z)
  2. see the console/terminal. it prints
pre
pre
**Blender Version** Broken: ``` >>> bpy.app.version, bpy.app.build_hash (2, 80, 40), b'a77b63c56943' ``` a builder.blender.org build from 6 jan 2019, **Short description of error** A function appended to `app.handlers.undo_pre` is called, but `app.handlers.undo_post` is not.. it seems to call `undo_pre` instead a second time. **Exact steps for others to reproduce the error** 1. execute this script to set both `undo_pre` and `undo_post` app.handlers ``` import bpy from bpy.app.handlers import persistent @persistent def handler_undo_pre(scene): print('pre') @persistent def handler_undo_post(scene): print('post') if __name__ == '__main__': bpy.app.handlers.undo_pre.append(handler_undo_pre) bpy.app.handlers.undo_post.append(handler_undo_post) - bpy.app.handlers.undo_pre.remove(handler_undo_pre) - bpy.app.handlers.undo_post.remove(handler_undo_post) ``` 2. then trigger an undo. (maybe add a node in a nodetree and press ctrl+z) 3. see the console/terminal. it prints ``` pre pre ```
Author
Member

Added subscriber: @tetha.z

Added subscriber: @tetha.z

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-01-07 09:51:14 +01:00

Indeed they are, most likely a copy/paste error. Thanks for the report, fix incoming. ;)

Indeed they are, most likely a copy/paste error. Thanks for the report, fix incoming. ;)

This issue was referenced by cfeffa7529

This issue was referenced by cfeffa7529a251c3a2af2cf2208a8550eb81ddcc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60247
No description provided.