Fix T60247: app.handlers.undo_post calls undo_pre's function.

Undo and redo post were actually calling respective pre funcs...